--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ typer = "^0.12.3"
 rich = "^13.7.1"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
